--- a/src/documents/styles/stylus/modules/_geral.styl
+++ b/src/documents/styles/stylus/modules/_geral.styl
@@ -1,4 +1,11 @@
-.ir
+@import '../_global.styl'
+
+.geral
+  background lucas 
+  teste()
+
+
+  .ir
   background-color: transparent;
   border: 0;
   overflow: hidden; /* IE 6/7 fallback */
