--- a/src/documents/styles/stylus/modules/_geral.styl
+++ b/src/documents/styles/stylus/modules/_geral.styl
@@ -5,72 +5,71 @@
   teste()
 
 
-  .ir
-  background-color: transparent;
-  border: 0;
-  overflow: hidden; /* IE 6/7 fallback */
-  *text-indent: -9999px;
+.ir
+  background-color  transparent
+  border  0
+  overflow  hidden 
 
-.ir:before
-  content: "";
-  display: block;
-  width: 0;
-  height: 150%;
+.ir before
+  content  ""
+  display  block
+  width  0
+  height  150%
 
 body
-  font: 12px Helvetica, Arial, sans-serif;
-  margin:0;
+  font  12px Helvetica, Arial, sans-serif
+  margin 0
 
 .wrapper
-  position:relative;
-  width:960px;
-  left:50%;
-  margin-left:-480px;
+  position relative
+  width 960px
+  left 50%
+  margin-left -480px
 
 a.button
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
+  -webkit-border-radius  5px
+  -moz-border-radius  5px
+  border-radius  5px
 
 /* Header */
 
 .header-bar
-  position:relative;
-  margin:0;
-  height:63px;
-  background:#313131;
+  position relative
+  margin 0
+  height 63px
+  background #313131
 
 .logo
-  position:absolute;
-  width:139px;
-  height:139px;
-  margin:24px 0 0 0;
-  top:0;
-  left:0;
-  background-image:url('/images/sprites.png');
-  background-position:-10px -10px; 
+  position absolute
+  width 139px
+  height 139px
+  margin 24px 0 0 0
+  top 0
+  left 0
+  background-image url('/images/sprites.png')
+  background-position -10px -10px 
 
 .slogan
-  position:absolute;
-  top:120px;
-  left:165px;
+  position absolute
+  top 120px
+  left 165px
 
 .menu
-  position:absolute;
-  margin:0;
-  padding:0;
-  top:24px;
-  left:165px;
-  color:#989898;
+  position absolute
+  margin 0
+  padding 0
+  top 24px
+  left 165px
+  color #989898
 
 .menu li
-  display:block;
-  float:left;
-  margin-right:23px;
+  display block
+  float left
+  margin-right 23px
 
 .search-container
-  width:205px;
-  height:30px;
-  position:absolute;
-  top:18px;
-  right:0px;
+  width 205px
+  height 30px
+  position absolute
+  top 18px
+  right 0px
