--- a/src/documents/styles/stylus/modules/_geral.styl
+++ b/src/documents/styles/stylus/modules/_geral.styl
@@ -1,16 +1,16 @@
 @import '../_global.styl'
 
 .geral
-  background lucas 
+  background lucas
   teste()
 
 
 .ir
   background-color  transparent
   border  0
-  overflow  hidden 
+  overflow  hidden
 
-.ir before
+.ir:before
   content  ""
   display  block
   width  0
@@ -47,7 +47,7 @@ a.button
   top 0
   left 0
   background-image url('/images/sprites.png')
-  background-position -10px -10px 
+  background-position -10px -10px
 
 .slogan
   position absolute
