--- a/src/documents/styles/stylus/_variables.styl
+++ b/src/documents/styles/stylus/_variables.styl
@@ -1,1 +1,6 @@
-lucas = red
+grid-gutter-width      = 2
+$grid-width            = 100%
+grid-max               = 960px
+grid-columns           = 12
+grid-separator         = "-"
+
