--- a/src/documents/styles/stylus/modules/_footer.styl
+++ b/src/documents/styles/stylus/modules/_footer.styl
@@ -1,5 +1,26 @@
 @import '../_global.styl'
 
+
+// footer
+
+.comunity
+	background #222222 
+	overflow hidden
+	
+
+
 .footer
-	background lucas 
-	teste()
+	background #313131 
+	overflow hidden
+	
+	.menu-footer
+		grid(4)
+	
+	.form
+		grid(8)	
+
+	.partners
+		grid(12)	
+
+	.employeers
+		grid(12)
