--- a/src/documents/styles/stylus/modules/_geral.styl
+++ b/src/documents/styles/stylus/modules/_geral.styl
@@ -1,9 +1,10 @@
 @import '../_global.styl'
 
-.geral
-  background lucas
-  teste()
+// geral
 
+.container
+    container()
+ 
 
 .ir
   background-color  transparent
