--- a/src/documents/styles/stylus/common/_mixins.styl
+++ b/src/documents/styles/stylus/common/_mixins.styl
@@ -1,2 +1,24 @@
-teste()
-	color #FFF 
+//
+// grid
+//
+
+container()
+	margin-left auto 
+	margin-right auto 
+	width $grid-width 
+	max-width grid-max
+
+grid-width(n, cols, gutter-width) 
+	width ($grid-width / cols * n - gutter-width)
+
+
+grid-base(gutter-width) 
+	display inline
+	float left
+	margin-left (gutter-width / 2)%
+	margin-right (gutter-width / 2)%
+
+
+grid(n, cols = grid-columns, gutter-width = grid-gutter-width) 
+	grid-base(gutter-width)
+	grid-width(n, cols, gutter-width)
