--- a/src/documents/styles/stylus/modules/_geral.styl
+++ b/src/documents/styles/stylus/modules/_geral.styl
@@ -4,7 +4,7 @@
 
 .container
     container()
- 
+
 
 .ir
   background-color  transparent
@@ -74,3 +74,16 @@ a.button
   position absolute
   top 18px
   right 0px
+
+.header-body
+  height 300px
+  background gray
+
+.header-resume-container
+  position absolute
+  width 500px
+  height 200px
+  left 50%
+  margin-left -250px
+  background red
+
