--- a/src/documents/styles/stylus/modules/_geral.styl
+++ b/src/documents/styles/stylus/modules/_geral.styl
@@ -76,14 +76,39 @@ a.button
   right 0px
 
 .header-body
-  height 300px
+  height 648px
+  margin-bottom 160px
   background gray
 
 .header-resume-container
   position absolute
-  width 500px
-  height 200px
+  display table
+  width 960px
+  top 198px
   left 50%
-  margin-left -250px
-  background red
+  margin-left -480px
+  border-bottom 4px solid #ed2b1f
 
+.header-resume-top-left-box
+  width 480px
+  height 334px
+  float left
+  background #ededed
+
+.header-resume-top-right-box
+  width 480px
+  height 334px
+  float left
+  background #dddddd
+
+.header-resume-bottom-left-box
+  width 480px
+  height 334px
+  float left
+  background #ffffff
+
+.header-resume-bottom-right-box
+  width 480px
+  height 334px
+  float left
+  background #ececec
