--- a/src/documents/styles/stylus/modules/_geral.styl
+++ b/src/documents/styles/stylus/modules/_geral.styl
@@ -1,10 +1,9 @@
 @import '../_global.styl'
 
-// geral
+/* Geral */
 
 .container
     container()
-
 
 .ir
   background-color  transparent
@@ -32,83 +31,3 @@ a.button
   -moz-border-radius  5px
   border-radius  5px
 
-/* Header */
-
-.header-bar
-  position relative
-  margin 0
-  height 63px
-  background #313131
-
-.logo
-  position absolute
-  width 139px
-  height 139px
-  margin 24px 0 0 0
-  top 0
-  left 0
-  background-image url('/images/sprites.png')
-  background-position -10px -10px
-
-.slogan
-  position absolute
-  top 120px
-  left 165px
-
-.menu
-  position absolute
-  margin 0
-  padding 0
-  top 24px
-  left 165px
-  color #989898
-
-.menu li
-  display block
-  float left
-  margin-right 23px
-
-.search-container
-  width 205px
-  height 30px
-  position absolute
-  top 18px
-  right 0px
-
-.header-body
-  height 648px
-  margin-bottom 160px
-  background gray
-
-.header-resume-container
-  position absolute
-  display table
-  width 960px
-  top 198px
-  left 50%
-  margin-left -480px
-  border-bottom 4px solid #ed2b1f
-
-.header-resume-top-left-box
-  width 480px
-  height 334px
-  float left
-  background #ededed
-
-.header-resume-top-right-box
-  width 480px
-  height 334px
-  float left
-  background #dddddd
-
-.header-resume-bottom-left-box
-  width 480px
-  height 334px
-  float left
-  background #ffffff
-
-.header-resume-bottom-right-box
-  width 480px
-  height 334px
-  float left
-  background #ececec
