--- a/dev/statics/scss/sections/_time.scss
+++ b/dev/statics/scss/sections/_time.scss
@@ -113,6 +113,12 @@
     &.paula{
       background-position: 0 -665px;
     }
+    &.giovanni{
+      background-position: 0 -916px;
+    }
+    &.ruy{
+      background-position: 0 -1008px;
+    }
   }
   .infos{
     float: left;
