--- a/src/documents/styles/stylus/modules/_geral.styl
+++ b/src/documents/styles/stylus/modules/_geral.styl
@@ -1,9 +1,19 @@
 @import '../_global.styl'
 
+body
+  font  12px Helvetica, Arial, sans-serif
+  background-image url('/images/bg-body.jpg')
+  background-repeat no-repeat
+  background-position center top  
+
+
 /* Geral */
 
 .container
-    container()
+  container()
+
+.i
+  background-image url('/images/sprites.png')
 
 .ir
   background-color  transparent
@@ -11,14 +21,11 @@
   overflow  hidden
 
 .ir:before
-  content  ""
+  content  ''
   display  block
   width  0
   height  150%
 
-body
-  font  12px Helvetica, Arial, sans-serif
-  margin 0
 
 .wrapper
   position relative
@@ -30,4 +37,3 @@ a.button
   -webkit-border-radius  5px
   -moz-border-radius  5px
   border-radius  5px
-
