--- a/src/documents/styles/stylus/common/_mixins.styl
+++ b/src/documents/styles/stylus/common/_mixins.styl
@@ -1,12 +1,16 @@
-//
+hide-text()
+	text-indent -99999px 
+	font-size 0 
+
+
 // grid
-//
 
 container()
 	margin-left auto 
 	margin-right auto 
 	width $grid-width 
 	max-width grid-max
+	position relative
 
 grid-width(n, cols, gutter-width) 
 	width ($grid-width / cols * n - gutter-width)
